# Meshed

./: .gitignore  AGENTS.md  README.md  package-lock.json
meshed-world-miniapp/: .gitignore  README.md  next.config.js  package.json
network_pipeline/: pyproject.toml
network_pipeline/config/: pipeline.a16z-crypto.yml
network_pipeline/data/staging/onboarding/: job_network_e5e1e664380b.json
network_pipeline/public/a16z-crypto/: company_network_data.json  company_network_summary.json  dashboard_snapshot.json  network_data.json  people_network_data.json
network_pipeline/public/crypto_ecosystems/a16z-crypto/: company_network_data.json  company_network_summary.json
network_pipeline/public/flexpoint-ford/: company_network_data.json  company_network_summary.json  dashboard_snapshot.json  investment_profiles.json  network_data.json  people_network_data.json  team_profiles.json
network_pipeline/scripts/: build_flexpointford_graph_bundle.py  publish_a16z_crypto_bundle.py  run_flexpointford_pipeline.sh  scrape_flexpointford_investments.py  scrape_flexpointford_team.py  scrape_vc_network.py  vc_scraper_runtime.py
network_pipeline/src/network_pipeline/: __init__.py  __main__.py  a16z_crypto.py  core.py  people_builder.py  registry.py  runner.py
network_pipeline/src/network_pipeline/config/: __init__.py  loader.py
network_pipeline/src/network_pipeline/stages/: __init__.py  dashboard_publish.py  fetch_raw.py  normalize_schema.py  people_synthesis.py  scrape_portfolio.py  similarity_scoring.py  source_registry.py
network_pipeline/tests/: test_a16z_crypto_artifacts.py
(+295 files in other folders)
